--- a/market-ajh/templates/base.html.twig
+++ b/market-ajh/templates/base.html.twig
@@ -45,6 +45,9 @@
                             <li>
                                 <a href="{{ path('app_item_index') }}" class="block px-4 py-2 text-WHITE hover:bg-PINK rounded-lg transition-colors duration-300">Gestion Items</a>
                             </li>
+                            <li>
+                                <a href="{{ path('app_guild') }}" class="block px-4 py-2 text-WHITE hover:bg-PINK rounded-lg transition-colors duration-300">Gestion Guildes</a>
+                            </li>
                         {% endif %}
                         {% if not app.user %}
                             <li>
@@ -82,7 +85,7 @@
     <!-- Footer aligné avec la navigation -->
     <footer class="bg-BLACK text-WHITE p-4 border-t-2 border-PINK">
         <div class="container mx-auto px-4 text-center">
-            <p class="text-PINK font-bold">&copy; {{ 'now'|date('Y') }} Ma Boutique</p>
+            <p class="text-PINK font-bold">&copy; {{ 'now'|date('Y') }} Boutique officielle de la guilde Ah-Jin</p>
             <p class="text-WHITE/80 mt-1">Tous droits réservés</p>
         </div>
     </footer>
