les chefs sont assignés par les guildes et peuvent désormaiss changer à volonté. Les utilisateurs ne peuvent plus changer de guilde ni se mettree dedans eux-même (suite: interface pour ajouter des membres à sa guilde si on est chef

--- a/market-ajh/templates/base.html.twig
+++ b/market-ajh/templates/base.html.twig
@@ -63,6 +63,9 @@
                             <li>
                                 <a href="{{ path('app_logout') }}" class="block px-4 py-2 text-WHITE hover:bg-PINK rounded-lg transition-colors duration-300">Se Déconnecter</a>
                             </li>
+                            <li>
+                                <a href="{{ path('app_profile') }}" class="block px-4 py-2 text-WHITE hover:bg-PINK rounded-lg transition-colors duration-300">Profil</a>
+                            </li>
                         {% endif %}
                     </ul>
                 </div>
