--- a/market-ajh/templates/base.html.twig
+++ b/market-ajh/templates/base.html.twig
@@ -84,7 +84,13 @@
     <main class="flex flex-col flex-grow container mx-auto ">
         {% block body %}{% endblock %}
     </main>
-
+    {% for label, messages in app.flashes %}
+    {% for message in messages %}
+        <div class="alert alert-{{ label }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endfor %}
     <!-- Footer aligné avec la navigation -->
     <footer class="bg-BLACK text-WHITE p-4 border-t-2 border-PINK">
         <div class="container mx-auto px-4 text-center">
