refonte du shop (choix du shop selon la guilde souhaitée, les guildes fixent leurs prix), interface pour fixer les prix pas encore faite

--- a/market-ajh/templates/base.html.twig
+++ b/market-ajh/templates/base.html.twig
@@ -54,11 +54,11 @@
                                 <a href="{{ path('app_login') }}" class="block px-4 py-2 text-WHITE hover:bg-PINK rounded-lg transition-colors duration-300">Se Connecter</a>
                             </li>
                             <li>
-                                <a href="{{ path('app_shop_list') }}" class="block px-4 py-2 text-WHITE hover:bg-PINK rounded-lg transition-colors duration-300">Voir les Items</a>
+                                <a href="{{ path('shop_index') }}" class="block px-4 py-2 text-WHITE hover:bg-PINK rounded-lg transition-colors duration-300">Voir les Items</a>
                             </li>
                         {% else %}
                             <li>
-                                <a href="{{ path('app_shop_list') }}" class="block px-4 py-2 text-WHITE hover:bg-PINK rounded-lg transition-colors duration-300">Voir les Items</a>
+                                <a href="{{ path('shop_index') }}" class="block px-4 py-2 text-WHITE hover:bg-PINK rounded-lg transition-colors duration-300">Voir les Items</a>
                             </li>
                             <li>
                                 <a href="{{ path('app_logout') }}" class="block px-4 py-2 text-WHITE hover:bg-PINK rounded-lg transition-colors duration-300">Se Déconnecter</a>
