--- a/market-ajh/templates/shop/index.html.twig
+++ b/market-ajh/templates/shop/index.html.twig
@@ -1,20 +1,21 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ShopController!{% endblock %}
+{% block title %}Sélection de la guilde{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/ebertinbench/market-AJH/market-ajh/src/Controller/ShopController.php</code></li>
-        <li>Your template at <code>/home/ebertinbench/market-AJH/market-ajh/templates/shop/index.html.twig</code></li>
+  <div class="container mx-auto p-4">
+    <h1 class="text-2xl font-bold mb-4">Choisissez une guilde</h1>
+    <ul class="list-disc pl-5">
+      {% for guild in guilds %}
+        <li class="mb-2">
+          <a href="{{ path('shop_show', {id: guild.id}) }}"
+             class="text-blue-600 hover:underline">
+            {{ guild.Name }}
+          </a>
+        </li>
+      {% else %}
+        <li>Aucune guilde disponible.</li>
+      {% endfor %}
     </ul>
-</div>
+  </div>
 {% endblock %}
