refonte de l'interface de sélection de la guilde du shop, ajout du logo de chaque guilde dans les fixtures et dans la bases de données. Les admins peuvent uploadd umage image avant de créer une guilde

--- a/market-ajh/templates/base.html.twig
+++ b/market-ajh/templates/base.html.twig
@@ -36,7 +36,7 @@
                     </svg>
                     
                 </button>
-                <div id="menu-dropdown" class="hidden absolute right-0 mt-2 w-48 bg-BLACK border border-PINK rounded-lg shadow-lg">
+                <div id="menu-dropdown" class="hidden absolute right-0 mt-2 w-48 bg-BLACK border border-PINK rounded-lg shadow-lg z-50">
                     <ul class="flex flex-col gap-2 p-2">
                         {% if is_granted('ROLE_ADMIN') %}
                             <li>
