--- a/market-ajh/templates/guild/index.html.twig
+++ b/market-ajh/templates/guild/index.html.twig
@@ -28,7 +28,7 @@
                                     <option value="{{ guild.id }}">{{ guild.name }}</option>
                                 {% endfor %}
                             </select>
-                            <button type="submit" class="bg-green text-white px-3 py-1 rounded hover:bg-BLACK transition">Assigner comme chef</button>
+                            <button type="submit" class="bg-VIOLET text-white px-3 py-1 rounded hover:bg-BLACK transition">Assigner comme chef</button>
                         </form>
                     </li>
                 {% endif %}
