--- a/market-ajh/templates/items/new.html.twig
+++ b/market-ajh/templates/items/new.html.twig
@@ -3,15 +3,17 @@
 {% block title %}Ajouter un item{% endblock %}
 
 {% block body %}
-  <h1>Ajouter un item à la guilde</h1>
-
-  {{ form_start(form) }}
-    {{ form_row(form.item) }}
-    {{ form_row(form.price) }}
-
-    <button class="btn btn-primary">Ajouter</button>
-  {{ form_end(form) }}
-
-  {# Optionnel : liste des items déjà présents #}
-  
+  <div class="flex flex-col items-center min-h-screen text-black">
+    <div class="w-full max-w-md p-8 bg-GREEN rounded shadow">
+      {{ form_start(form) }}
+        <div class="mb-4">
+          {{ form_row(form.item, {'attr': {'class': 'block w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500 text-black'}}) }}
+        </div>
+        <div class="mb-4">
+          {{ form_row(form.price, {'attr': {'class': 'block w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500 text-black'}}) }}
+        </div>
+        <button class="w-full bg-VIOLET text-WHITE py-2 px-4 rounded ">Ajouter</button>
+      {{ form_end(form) }}
+    </div>
+  </div>
 {% endblock %}
